--- a/CodingTest_Study/CodingTest_Study.vcxproj.filters
+++ b/CodingTest_Study/CodingTest_Study.vcxproj.filters
@@ -103,6 +103,12 @@
     <Filter Include="01. Programmers\2025\06\08">
       <UniqueIdentifier>{8e27a506-ffd8-4425-a221-6616ccb81ba5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="00. BaekJoon\2025\06\11">
+      <UniqueIdentifier>{de25cd00-b928-441b-a0d4-af5fd568f00b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01. Programmers\2025\06\11">
+      <UniqueIdentifier>{bb08a612-f1ca-41e2-ab39-b8ae2a81b125}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\BaekJoon\BaekJoon_1260.cpp">
@@ -242,6 +248,12 @@
     </ClCompile>
     <ClCompile Include="..\Code\Programmers\Programmers_169199.cpp">
       <Filter>01. Programmers\2025\06\08</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\BaekJoon\BaekJoon_1012.cpp">
+      <Filter>00. BaekJoon\2025\06\11</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\Programmers\Programmers_42628.cpp">
+      <Filter>01. Programmers\2025\06\11</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
