--- a/CodingTest_Study/CodingTest_Study.vcxproj.filters
+++ b/CodingTest_Study/CodingTest_Study.vcxproj.filters
@@ -115,6 +115,9 @@
     <Filter Include="01. Programmers\2025\06\14">
       <UniqueIdentifier>{62470849-ecc4-4e22-97b3-a538e4b86078}</UniqueIdentifier>
     </Filter>
+    <Filter Include="00. BaekJoon\2025\06\14">
+      <UniqueIdentifier>{52a220af-91f3-4448-801f-b206699fd1da}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\BaekJoon\BaekJoon_1260.cpp">
@@ -272,6 +275,9 @@
     </ClCompile>
     <ClCompile Include="..\Code\Programmers\Programmers_12927.cpp">
       <Filter>01. Programmers\2025\06\14</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\BaekJoon\BaekJoon_16637.cpp">
+      <Filter>00. BaekJoon\2025\06\14</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
