--- a/CodingTest_Study/CodingTest_Study.vcxproj.filters
+++ b/CodingTest_Study/CodingTest_Study.vcxproj.filters
@@ -118,6 +118,9 @@
     <Filter Include="00. BaekJoon\2025\06\14">
       <UniqueIdentifier>{52a220af-91f3-4448-801f-b206699fd1da}</UniqueIdentifier>
     </Filter>
+    <Filter Include="00. BaekJoon\2025\06\15">
+      <UniqueIdentifier>{0baeea5a-e644-4483-824c-594507a928dd}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\BaekJoon\BaekJoon_1260.cpp">
@@ -278,6 +281,9 @@
     </ClCompile>
     <ClCompile Include="..\Code\BaekJoon\BaekJoon_16637.cpp">
       <Filter>00. BaekJoon\2025\06\14</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\BaekJoon\BaekJoon_1931.cpp">
+      <Filter>00. BaekJoon\2025\06\15</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
